--- a/GateWay/GateWay.vcxproj
+++ b/GateWay/GateWay.vcxproj
@@ -154,7 +154,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\Debug\ComunicationDLL.lib" />
+    <Library Include="..\x64\Debug\ComunicationDLL.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
