--- a/GateWay/GateWay.vcxproj.filters
+++ b/GateWay/GateWay.vcxproj.filters
@@ -34,6 +34,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\Debug\ComunicationDLL.lib" />
+    <Library Include="..\x64\Debug\ComunicationDLL.lib" />
   </ItemGroup>
 </Project>
