--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -153,7 +153,7 @@
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\Debug\ComunicationDLL.lib" />
+    <Library Include="..\x64\Debug\ComunicationDLL.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
